--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="submit" value="Submit">
         </form>
         <ul>
-            <li><div></div><span>Hey there, it's Bad Minion again, Yeee</span>
+            <li><div></div><span>Hey there, it's Bad Minion again,</span>
             </li>
             <li><div></div><span>I'm a Hitman</span>
             </li>
