Bullet points, shadow and padding

--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./resources/css/index.css">
+    <link rel="stylesheet" href="index.css">
     
     <title>Bad Minion</title>
 </head>
 
 <body>
+
+    <!--Nav Bar -->
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Cases</a></li>
+            <li><a href="">Call Me</a></li>
+        </ul> 
+
+
+    </nav>
     <!--Banner Section-->
     <div class="banner">
         <h1>Minion Landing Banner </h1>
@@ -19,20 +31,23 @@
     </div>
 
     <!--Minion Section-->
-    <div> 
-        <div class="center"><span>Minion Hitman</span></div>
+    <div class="center"><span>Minion Hitman</span></div>
+    <div class="text-margin"> 
+        
         <p>Social media dedicated to a Bad Minion</p>
         <form>
             <input type="text">
             <input type="submit" value="Submit">
         </form>
+        <div class="list">
         <ul>
-            <li><div></div><span>Hey there, it's Bad Minion again,</span>
+            <li><div class="avatar"></div><span>Hey there, it's Bad Minion again,</span>
             </li>
-            <li><div></div><span>I'm a Hitman</span>
+            <li><div class="avatar"></div><span>I'm a Hitman</span>
             </li>
-            <li><div></div><span>Banana is the fruit</span>
+            <li><div class="avatar"></div><span>Banana is the fruit</span>
             </li>
+        </div>
         </ul>
     </div>
 
